# openstack-ansible-os_congress

./: .gitreview  CONTRIBUTING.rst  README.md  README.rst  Vagrantfile  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
defaults/: main.yml
doc/: Makefile  requirements.txt
doc/source/: conf.py  index.rst
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py  index.rst
tasks/: congress_apt_packages.yml  congress_db_setup.yml  congress_init.yml  congress_init_systemd.yml  congress_install.yml  congress_post_install.yml  congress_pre_install.yml  congress_service_setup.yml  main.yml
templates/: api-paste.ini  congress-systemd-init.j2  congress-systemd-tmpfiles.j2  congress.conf  congress.conf.j2
tests/: ansible-role-requirements.yml  inventory  os_congress-overrides.yml  test-congress-functional.yml  test-install-congress.yml  test-intall-congress.yml  test-repo-clone.sh  test.yml
tests/group_vars/: all_containers.yml
tests/host_vars/: congress1.yml  localhost.yml  openstack1.yml
vars/: debian.yml  main.yml  redhat-7.yml  ubuntu-16.04.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
