[metadata]
name = openstack-ansible-os_congress
summary = os_congress role for OpenStack-Ansible
description-file =
    README.rst
author = Taseer Ahmed
author-email = taseer94@gmail.com
home-page = https://docs.openstack.org/openstack-ansible-os_neutron/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1